--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>QueryIT</title>
 </head>
 <body>
-    
+    <header>
+        <head>
+            <h1>QueryIT: Aplicação com a API do IBGE</h1>
+        </head>
+    </header>
+    <main>
+        <div>
+            
+        </div>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
