--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         </head>
     </header>
     <main>
-        <div>
-            
-        </div>
+        <div class="container1"></div>
+        <div class="container2"></div>
+        <div class="conatainer3"></div>
+        <div class="conatainer4"></div>
     </main>
     <script src="script.js"></script>
 </body>
