--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         </head>
     </header>
     <main>
-        <div class="container1"></div>
+        <div class="container1">
+            <h1>Busque localidades aqui: </h1>
+            <form id="localidade">
+                <input type="text" name="busca" id="busca" required>
+                <input type="submit" value="enviar">
+            </form>
+            <div id="resultado"></div>
+        </div>
         <div class="container2"></div>
         <div class="conatainer3"></div>
         <div class="conatainer4"></div>
