--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <div class="container1">
-            <h1>Busque localidades aqui: </h1>
-            <form id="localidade">
+            <h1>Veja a frequência do seu nome: </h1>
+            <form id="nomes">
                 <input type="text" name="busca" id="busca" required>
                 <input type="submit" value="enviar">
             </form>
