--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,11 @@
 </head>
 <body>
     <header>
-        <head>
-            <h1>QueryIT: Aplicação com a API do IBGE</h1>
-        </head>
+        <h1>QueryIT: Aplicação com a API do IBGE</h1>
     </header>
     <main>
         <div class="container1">
-            <h1>Veja a frequência do seu nome: </h1>
+            <h2>Veja a frequência do seu nome: </h2>
             <form id="nomes">
                 <input type="text" name="busca" id="busca" required>
                 <input type="submit" value="enviar">
