--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container1">
             <h2>Veja a frequência do seu nome: </h2>
             <form id="nomes">
-                <input type="text" name="busca" id="busca" required>
-                <input type="submit" value="enviar">
+                <input type="text" name="busca" id="busca" placeholder="Digite aqui" required>
+                <input id="submit" type="submit" value="enviar">
             </form>
             <div id="resultado"></div>
         </div>
