--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>QueryIT: Aplicação com a API do IBGE</h1>
     </header>
     <main>
-        <div class="container1">
+        <div class="container">
             <h2>Veja a frequência do seu nome: </h2>
             <form id="nomes">
                 <input type="text" name="busca" id="busca" placeholder="Digite aqui" required>
@@ -19,9 +19,10 @@
             </form>
             <div id="resultado"></div>
         </div>
-        <div class="container2"></div>
-        <div class="conatainer3"></div>
-        <div class="conatainer4"></div>
+        <div class="container"><h2>Veja a frequência do seu nome: </h2></div>
+        <div class="container"><h2>Veja a frequência do seu nome: </h2></div>
+        <div class="container"><h2>Veja a frequência do seu nome: </h2></div>
+        <div class="container"><h2>Veja a frequência do seu nome: </h2></div>
     </main>
     <script src="script.js"></script>
 </body>
