--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     </header>
     <main>
         <div class="container">
-            <h2>Veja a frequência do seu nome: </h2>
-            <form id="nomes">
-                <input type="text" name="busca" id="busca" placeholder="Digite aqui" required>
-                <input id="submit" type="submit" value="enviar">
-            </form>
+            <div>
+                <h2>Veja a frequência do seu nome: </h2>
+                <form id="nomes">
+                    <input type="text" name="busca" id="busca" placeholder="Digite aqui" required>
+                    <input id="submit" type="submit" value="enviar">
+                </form>
+            </div>
             <div id="resultado"></div>
         </div>
         <div class="container"><h2>Veja a frequência do seu nome: </h2></div>
