--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Índice:</h2>
             <ul>
                 <a href="#frequencia"><li>Frequência de Nomes</li></a>
-                <a href="#paises"><li>Perfil de Paises (dados IBGE)</li></a>
+                <a href="#divpaises"><li>Perfil de Paises (dados IBGE)</li></a>
                 <a href="#novidades"><li>Principais novidades IBGE</li></a>
                 <a href="#produtos"><li>Produtos IBGE</li></a>
                 <a href="#localidades"><li>Localidades por UF</li></a>
@@ -31,7 +31,7 @@
             </div>
             <div id="resultado"></div>
         </div>
-        <div id="paises" class="container">
+        <div id="divpaises" class="container">
             <h2>Veja o perfil de qualquer pais com os dados do IBGE, pesquise aqui: </h2>
             <h3>Use essa lista de <a href="https://servicodados.ibge.gov.br/api/docs/paises#api-acervo">identificadores.</a></h3>
             <div>
