--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="style.css">
     <title>QueryIT</title>
 </head>
-<body>
-    <header id="topo">
+<body id="topo">
+    <header>
         <h1>QueryIT: Aplicação com a API do IBGE</h1>
     </header>
     <main>
         <div class="container">
             <h2>Índice:</h2>
             <ul>
-                <a href="#frequencia"><li>Frequência de Nomes</li></a>
+                <a href="#divfrequencia"><li>Frequência de Nomes</li></a>
                 <a href="#divpaises"><li>Perfil de Paises (dados IBGE)</li></a>
-                <a href="#novidades"><li>Principais novidades IBGE</li></a>
-                <a href="#produtos"><li>Produtos IBGE</li></a>
-                <a href="#localidades"><li>Localidades por UF</li></a>
+                <a href="#divnovidades"><li>Principais novidades IBGE</li></a>
+                <a href="#divprodutos"><li>Produtos IBGE</li></a>
+                <a href="#divlocalidades"><li>Localidades por UF</li></a>
             </ul>
         </div>
-        <div id="frequencia" class="container">
+        <div id="divfrequencia" class="container">
             <div>
                 <h2>Veja a frequência do seu nome, basta escreve-lo e pesquisar: </h2>
                 <form id="nomes">
@@ -42,7 +42,7 @@
             </div>
             <div id="resultadoPaises"></div>
         </div>
-        <div id="novidades" class="container">
+        <div id="divnovidades" class="container">
             <h2>Pesquise sobre as principais novidades do IBGE: </h2>
             <div>
                 <form id="noticias">
@@ -52,7 +52,7 @@
             </div>
             <div id="resultadoNoticias"></div>
         </div>
-        <div id="produtos" class="container">
+        <div id="divprodutos" class="container">
             <h2>Pesquise sobre os produtos do IBGE: </h2>
             <div>
                 <form id="produtos">
@@ -62,7 +62,7 @@
             </div>
             <div id="resultadoprodutos"></div>
         </div>
-        <div id="localidades" class="container">
+        <div id="divlocalidades" class="container">
             <h2>Pesquise as localidades por UF: </h2>
             <div>
                 <form id="locais">
