--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>QueryIT</title>
 </head>
 <body id="topo">
@@ -74,10 +74,10 @@
         </div>
         <a title="Ir para o topo da página" id="ir-topo" href="#topo">&#9650;</a>
     </main>
-    <script src="script.js" ></script>
-    <script src="paises.js" ></script>
-    <script src="noticias.js"></script>
-    <script src="produtos.js"></script>
-    <script src="localidades.js"></script>
+    <script src="/JS/nomes.js" ></script>
+    <script src="/JS/paises.js" ></script>
+    <script src="/JS/noticias.js"></script>
+    <script src="/JS/produtos.js"></script>
+    <script src="/JS/localidades.js"></script>
 </body>
 </html>
