--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         </div>
         <a title="Ir para o topo da página" id="ir-topo" href="#topo">&#9650;</a>
     </main>
-    <script src="/JS/nomes.js" ></script>
-    <script src="/JS/paises.js" ></script>
-    <script src="/JS/noticias.js"></script>
-    <script src="/JS/produtos.js"></script>
-    <script src="/JS/localidades.js"></script>
+    <script src="./JS/nomes.js" ></script>
+    <script src="./JS/paises.js" ></script>
+    <script src="./JS/noticias.js"></script>
+    <script src="./JS/produtos.js"></script>
+    <script src="./JS/localidades.js"></script>
 </body>
 </html>
